--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </li>
                 <li class="group">
                   <a
-                    href="#About"
+                    href="#about"
                     class="text-base text-dark py-2 mx-8 flex group-hover:text-primary"
                     >Tentang Saya</a
                   >
