fix id portfolio

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </li>
                 <li class="group">
                   <a
-                    href="#portofolio"
+                    href="#portfolio"
                     class="text-base text-dark py-2 mx-8 flex group-hover:text-primary"
                     >Portofolio</a
                   >
@@ -80,7 +80,7 @@
                   <a
                     href="#contact"
                     class="text-base text-dark py-2 mx-8 flex group-hover:text-primary"
-                    >Blog</a
+                    >Contact</a
                   >
                 </li>
               </ul>
