--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html
+  lang="en"
+  class="scroll-smooth"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -733,6 +736,16 @@
       </div>
     </footer>
     <!-- Footer End -->
+
+    <!-- Back to top Start -->
+    <a
+      id="to-top"
+      href="#home"
+      class="fixed hidden justify-center items-center bottom-4 right-4 p-4 z-[9999] h-14 w-14 bg-primary rounded-full hover:animate-pulse"
+    >
+      <span class="block w-5 h-5 border-t-2 border-l-2 rotate-45 mt-2"></span>
+    </a>
+    <!-- Back to top End -->
 
     <script src="src/js/script.js"></script>
   </body>
