--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <div class="w-full self-center px-4 lg:w-1/2">
             <h1 class="text-base font-semibold text-primary md:text-xl">Halo Semua 👋, saya <span class="block font-bold text-dark text-4xl mt-1 lg:text-5xl">Khalilul Fajri Zamardiyanto</span></h1>
             <h2 class="font-medium text-secondary text-lg mb-5 lg:text-2xl">Web Developer & <span class="text-dark">Administration</span></h2>
-            <p class="font-medium text-secondary mb-10 leading-relaxed">belajar Web Programing itu mudah dan menyenangkan bukan. <span class="text-dark font-bold">bukan!</span></p>
+            <!-- <p class="font-medium text-secondary mb-10 leading-relaxed">belajar Web Programing itu mudah dan menyenangkan bukan. <span class="text-dark font-bold">bukan!</span></p> -->
 
             <a
               href="#"
@@ -151,12 +151,16 @@
         <div class="flex flex-wrap">
           <div class="w-full px-4 mb-10 lg:w-1/2">
             <h4 class="font-bold uppercase text-primary text-lg mb-3">Tentang Saya</h4>
-            <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl">Yuk Belajar Bersama di wewer</h2>
-            <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus perspiciatis natus veniam, tempora modi numquam consectetur.</p>
+            <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl">Berikut Perkelanan diri saya</h2>
+            <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">
+              Saya Khalilul Fajri Zamardiyanto, Saya lahir di Padang Pada tanggal 15 Mei 1999, saya merupakan lulusan Sarjana Komputer Universitas Putra Indonesia “YPTK” Padang tahun 2022. Aktivitas terakhir saat ini aktif sebagai pencari
+              kerja dan selama kuliah menguasai ilmu komputer seperti sistem penunjang keputusan, data mining dan web desain, Saat ini saya sedang aktif mencari peluang kerja dan belajar ilmu ilmu yang baru dan juga mengulang mempelajari
+              ilmu yang telah saya kuasai, motivasi saya yaitu saya ingin memberikan yang terbaik di setiap kesempatan karena saya tidak ingin menjadi penghambat bagi rekan rekan saya.
+            </p>
           </div>
           <div class="w-full px-4 lg:w-1/2">
             <h3 class="font-semibold text-dark text-2xl mb-4 lg:text-3xl lg:pt-10">Ayuk Berteman</h3>
-            <p class="font-medium text-base text-secondary mb-5 lg:text-lg">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit repellendus labore quas blanditiis amet facilis. Omnis, reprehenderit facere.</p>
+            <p class="font-medium text-base text-secondary mb-5 lg:text-lg">Berikut ini adalah link dari sosial media yang saya gunakan.</p>
             <div class="flex items-center">
               <!-- Instagram -->
               <a
@@ -260,7 +264,7 @@
           <div class="max-w-xl mx-auto text-center mb-16">
             <h4 class="font-semibold text-lg text-primary mb-2">Portfolio</h4>
             <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Project terbaru</h2>
-            <p class="font-medium text-md text-secondary md:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste commodi nemo quasi eligendi. Similique, reiciendis.</p>
+            <p class="font-medium text-md text-secondary md:text-lg">Berikut ini merupakan project project yang telah saya buat.</p>
           </div>
         </div>
 
@@ -348,7 +352,7 @@
             <h4 class="font-semibold text-lg text-primary mb-2">Clients</h4>
             <h2 class="font-bold text-white text-3xl mb-4 sm:text-4xl lg:text-5xl">yang pernah bekerja sama</h2>
             <p class="font-medium text-md text-secondary md:text-lg">
-              untuk saat ini saya masih belum bekerja sama dengan pihak manapun dan logo dibawah hanya sebagai pajangan saja, sesi ini saya tambahkan untuk memperbagus tampilan website ini
+              untuk saat ini saya masih belum bekerja sama dengan pihak manapun dan logo dibawah hanya sebagai pajangan saja, sesi ini saya tambahkan untuk meramaikan tampilan website ini
             </p>
           </div>
         </div>
@@ -439,15 +443,15 @@
           <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
             <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
               <img
-                src="https://source.unsplash.com/360x200?programming"
-                alt="Programing"
+                src="https://source.unsplash.com/360x200?Anime"
+                alt="Anime"
               />
               <div class="py-8 px-6">
                 <h3>
                   <a
                     href="#"
                     class="block mb-3 font-semibold text-xl hover:text-primary truncate"
-                    >Review Keyboard saya</a
+                    >Pembahasan Anime</a
                   >
                 </h3>
                 <p class="font-medium text-secondary text-base mb-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus nulla labore inventore.</p>
@@ -464,7 +468,7 @@
             <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
               <img
                 src="https://source.unsplash.com/360x200?programming"
-                alt="Programing"
+                alt="Coffe"
               />
               <div class="py-8 px-6">
                 <h3>
