--- a/index.html
+++ b/index.html
@@ -41,50 +41,66 @@
 
             <nav
               id="nav-menu"
-              class="hidden absolute py-5 bg-white shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none"
+              class="hidden absolute py-5 bg-white shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none dark:bg-dark dark:shadow-slate-500 lg:dark:bg-transparent"
             >
               <ul class="block lg:flex">
                 <li class="group">
                   <a
                     href="#home"
-                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary"
+                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white"
                     >Beranda</a
                   >
                 </li>
                 <li class="group">
                   <a
                     href="#about"
-                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary"
+                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white"
                     >Tentang Saya</a
                   >
                 </li>
                 <li class="group">
                   <a
                     href="#portfolio"
-                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary"
+                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white"
                     >Portofolio</a
                   >
                 </li>
                 <li class="group">
                   <a
                     href="#clients"
-                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary"
+                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white"
                     >Clients</a
                   >
                 </li>
                 <li class="group">
                   <a
                     href="#blog"
-                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary"
+                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white"
                     >Blog</a
                   >
                 </li>
                 <li class="group">
                   <a
                     href="#contact"
-                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary"
+                    class="text-base text-dark py-2 mx-8 flex group-hover:text-primary dark:text-white"
                     >Contact</a
                   >
+                </li>
+                <li class="flex items-center pl-8 mt-3 lg:mt-0">
+                  <div class="flex">
+                    <span class="mr-2 text-sm text-slate-500">light</span>
+                    <input
+                      type="checkbox"
+                      class="hidden"
+                      id="dark-toggle"
+                    />
+                    <label for="dark-toggle">
+                      <div class="flex h-5 w-9 cursor-pointer items-center rounded-full bg-slate-500 p-1">
+                        <div class="toggle-circle h-4 w-4 rounded-full bg-white transition duration-300 ease-in-out"></div>
+                      </div>
+                    </label>
+                    <span class="ml-2 text-sm text-slate-500">Dark</span>
+                  </div>
                 </li>
               </ul>
             </nav>
@@ -97,13 +113,13 @@
     <!-- Hero Section Start -->
     <section
       id="home"
-      class="pt-36"
+      class="pt-36 dark:bg-dark"
     >
       <div class="container">
         <div class="flex flex-wrap">
           <div class="w-full self-center px-4 lg:w-1/2">
-            <h1 class="text-base font-semibold text-primary md:text-xl">Halo Semua 👋, saya <span class="block font-bold text-dark text-4xl mt-1 lg:text-5xl">Khalilul Fajri Zamardiyanto</span></h1>
-            <h2 class="font-medium text-secondary text-lg mb-5 lg:text-2xl">Web Developer & <span class="text-dark">Administration</span></h2>
+            <h1 class="text-base font-semibold text-primary md:text-xl">Halo Semua 👋, saya <span class="block font-bold text-dark text-4xl mt-1 lg:text-5xl dark:text-white">Khalilul Fajri Zamardiyanto</span></h1>
+            <h2 class="font-medium text-secondary text-lg mb-5 lg:text-2xl">Web Developer & <span class="text-dark dark:text-white">Administration</span></h2>
             <!-- <p class="font-medium text-secondary mb-10 leading-relaxed">belajar Web Programing itu mudah dan menyenangkan bukan. <span class="text-dark font-bold">bukan!</span></p> -->
 
             <a
@@ -118,10 +134,10 @@
               <img
                 src="src/img/khalil.png"
                 alt="Khalilul Fajri"
-                class="max-w-full mx-auto"
+                class="max-w-full mx-auto relative z-10"
                 width="400"
               />
-              <span class="absolute -bottom-0 -z-10 left-1/2 -translate-x-1/2 md:scale-125">
+              <span class="absolute -bottom-0 left-1/2 -translate-x-1/2 md:scale-125">
                 <svg
                   width="400"
                   height="400"
@@ -145,13 +161,13 @@
     <!-- About Section Start -->
     <section
       id="about"
-      class="pt-36 pb-32"
+      class="pt-36 pb-32 dark:bg-dark"
     >
       <div class="container">
         <div class="flex flex-wrap">
           <div class="w-full px-4 mb-10 lg:w-1/2">
             <h4 class="font-bold uppercase text-primary text-lg mb-3">Tentang Saya</h4>
-            <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl">Berikut Perkelanan diri saya</h2>
+            <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl dark:text-white">Berikut Perkelanan diri saya</h2>
             <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">
               Saya Khalilul Fajri Zamardiyanto, Saya lahir di Padang Pada tanggal 15 Mei 1999, saya merupakan lulusan Sarjana Komputer Universitas Putra Indonesia “YPTK” Padang tahun 2022. Aktivitas terakhir saat ini aktif sebagai pencari
               kerja dan selama kuliah menguasai ilmu komputer seperti sistem penunjang keputusan, data mining dan web desain, Saat ini saya sedang aktif mencari peluang kerja dan belajar ilmu ilmu yang baru dan juga mengulang mempelajari
@@ -159,7 +175,7 @@
             </p>
           </div>
           <div class="w-full px-4 lg:w-1/2">
-            <h3 class="font-semibold text-dark text-2xl mb-4 lg:text-3xl lg:pt-10">Ayuk Berteman</h3>
+            <h3 class="font-semibold text-dark text-2xl mb-4 lg:text-3xl lg:pt-10 dark:text-white">Ayuk Berteman</h3>
             <p class="font-medium text-base text-secondary mb-5 lg:text-lg">Berikut ini adalah link dari sosial media yang saya gunakan.</p>
             <div class="flex items-center">
               <!-- Instagram -->
@@ -257,13 +273,13 @@
     <!-- Portfolio Section start -->
     <section
       id="portfolio"
-      class="pt-36 pb-16 bg-slate-100"
+      class="pt-36 pb-16 bg-slate-100 dark:bg-slate-800"
     >
       <div class="container">
         <div class="w-full px-4">
           <div class="max-w-xl mx-auto text-center mb-16">
             <h4 class="font-semibold text-lg text-primary mb-2">Portfolio</h4>
-            <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Project terbaru</h2>
+            <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl dark:text-white">Project terbaru</h2>
             <p class="font-medium text-md text-secondary md:text-lg">Berikut ini merupakan project project yang telah saya buat.</p>
           </div>
         </div>
@@ -277,7 +293,7 @@
                 width="w-full"
               />
             </div>
-            <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Toko Komik</h3>
+            <h3 class="font-semibold text-xl text-dark mt-5 mb-3 dark:text-white">Toko Komik</h3>
             <p class="font-medium text-base text-secondary mb-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error voluptatem hic consequatur!</p>
             <a
               href="#"
@@ -294,7 +310,7 @@
                 width="w-full"
               />
             </div>
-            <h3 class="font-semibold text-xl text-dark mt-5 mb-3">web kedai kopi</h3>
+            <h3 class="font-semibold text-xl text-dark mt-5 mb-3 dark:text-white">web kedai kopi</h3>
             <p class="font-medium text-base text-secondary mb-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error voluptatem hic consequatur!</p>
             <a
               href="#"
@@ -311,7 +327,7 @@
                 width="w-full"
               />
             </div>
-            <h3 class="font-semibold text-xl text-dark mt-5 mb-3">web wedding</h3>
+            <h3 class="font-semibold text-xl text-dark mt-5 mb-3 dark:text-white">web wedding</h3>
             <p class="font-medium text-base text-secondary mb-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error voluptatem hic consequatur!</p>
             <a
               href="#"
@@ -328,7 +344,7 @@
                 width="w-full"
               />
             </div>
-            <h3 class="font-semibold text-xl text-dark mt-5 mb-3">web Old Portfolio</h3>
+            <h3 class="font-semibold text-xl text-dark mt-5 mb-3 dark:text-white">web Old Portfolio</h3>
             <p class="font-medium text-base text-secondary mb-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error voluptatem hic consequatur!</p>
             <a
               href="#"
@@ -344,13 +360,13 @@
     <!-- Clients Section Start -->
     <section
       id="clients"
-      class="pt-32 pb-16 text-slate-100 bg-slate-700"
+      class="pt-32 pb-16 text-slate-100 bg-slate-700 dark:bg-slate-300"
     >
       <div class="container">
         <div class="w-full px-4">
           <div class="mx-auto text-center mb-16">
             <h4 class="font-semibold text-lg text-primary mb-2">Clients</h4>
-            <h2 class="font-bold text-white text-3xl mb-4 sm:text-4xl lg:text-5xl">yang pernah bekerja sama</h2>
+            <h2 class="font-bold text-white text-3xl mb-4 sm:text-4xl lg:text-5xl dark:text-dark">yang pernah bekerja sama</h2>
             <p class="font-medium text-md text-secondary md:text-lg">
               untuk saat ini saya masih belum bekerja sama dengan pihak manapun dan logo dibawah hanya sebagai pajangan saja, sesi ini saya tambahkan untuk meramaikan tampilan website ini
             </p>
@@ -404,20 +420,20 @@
     <!-- Blog Section Start -->
     <section
       id="blog"
-      class="pt-36 pb-32 bg-slate-100"
+      class="pt-36 pb-32 bg-slate-100 dark:bg-dark"
     >
       <div class="container">
         <div class="w-full px-4">
           <div class="max-w-xl mx-auto text-center mb-16">
             <h4 class="font-semibold text-lg text-primary mb-2">Blog</h4>
-            <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Tulisan terkini</h2>
+            <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl dark:text-white">Tulisan terkini</h2>
             <p class="font-medium text-md text-secondary md:text-lg">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur, ullam. Aliquam, exercitationem nesciunt?</p>
           </div>
         </div>
 
         <div class="flex flex-wrap">
           <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
-            <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
+            <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10 dark:bg-slate-800">
               <img
                 src="https://source.unsplash.com/360x200?programming"
                 alt="Programing"
@@ -426,7 +442,7 @@
                 <h3>
                   <a
                     href="#"
-                    class="block mb-3 font-semibold text-xl hover:text-primary truncate"
+                    class="block mb-3 font-semibold text-xl hover:text-primary truncate dark:text-white"
                     >Tips Belajar Programming</a
                   >
                 </h3>
@@ -441,7 +457,7 @@
           </div>
 
           <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
-            <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
+            <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10 dark:bg-slate-800">
               <img
                 src="https://source.unsplash.com/360x200?Anime"
                 alt="Anime"
@@ -450,7 +466,7 @@
                 <h3>
                   <a
                     href="#"
-                    class="block mb-3 font-semibold text-xl hover:text-primary truncate"
+                    class="block mb-3 font-semibold text-xl hover:text-primary truncate dark:text-white"
                     >Pembahasan Anime</a
                   >
                 </h3>
@@ -465,7 +481,7 @@
           </div>
 
           <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
-            <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
+            <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10 dark:bg-slate-800">
               <img
                 src="https://source.unsplash.com/360x200?programming"
                 alt="Coffe"
@@ -474,7 +490,7 @@
                 <h3>
                   <a
                     href="#"
-                    class="block mb-3 font-semibold text-xl hover:text-primary truncate"
+                    class="block mb-3 font-semibold text-xl hover:text-primary truncate dark:text-white"
                     >Menikmati secangkir kopi</a
                   >
                 </h3>
@@ -495,13 +511,13 @@
     <!-- Contact Section Start -->
     <section
       id="contact"
-      class="pt-36 pb-32"
+      class="pt-36 pb-32 dark:bg-slate-800"
     >
       <div class="container">
         <div class="w-full px-4">
           <div class="max-w-xl mx-auto text-center mb-16">
             <h4 class="font-semibold text-lg text-primary mb-2">Contact</h4>
-            <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Hubungi Saya</h2>
+            <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl dark:text-white">Hubungi Saya</h2>
             <p class="font-medium text-md text-secondary md:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, natus?</p>
           </div>
         </div>
