--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
       rel="stylesheet"
       href="src/output.css"
     />
+    <script>
+      if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+        document.documentElement.classList.add('dark');
+      } else {
+        document.documentElement.classList.remove('dark');
+      }
+    </script>
   </head>
   <body>
     <!-- Header Start -->
