menambahkan link pada seksi portofolio

--- a/index.html
+++ b/index.html
@@ -301,9 +301,9 @@
               />
             </div>
             <h3 class="font-semibold text-xl text-dark mt-5 mb-3 dark:text-white">Toko Komik</h3>
-            <p class="font-medium text-base text-secondary mb-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error voluptatem hic consequatur!</p>
+            <p class="font-medium text-base text-secondary mb-4">web toko komik ini dibuat dengan html dan css, tujuan pembuatan web ini sebagai tugas web desain semasa kuliah</p>
             <a
-              href="#"
+              href="https://khalilfajrii.github.io/Toko_Komik/"
               class="font-medium text-sm text-white bg-primary py-3 px-6 rounded-lg hover:opacity-80"
               >Lihat Project</a
             >
@@ -318,9 +318,9 @@
               />
             </div>
             <h3 class="font-semibold text-xl text-dark mt-5 mb-3 dark:text-white">web kedai kopi</h3>
-            <p class="font-medium text-base text-secondary mb-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error voluptatem hic consequatur!</p>
+            <p class="font-medium text-base text-secondary mb-4">web ini dibuat dengan html, css dan javascript, dibuat untuk tujuan belajar membuat web secara mandiri</p>
             <a
-              href="#"
+              href="https://khalilfajrii.github.io/kopi-kafari-fajar/"
               class="font-medium text-sm text-white bg-primary py-3 px-6 rounded-lg hover:opacity-80"
               >Lihat Project</a
             >
@@ -335,9 +335,9 @@
               />
             </div>
             <h3 class="font-semibold text-xl text-dark mt-5 mb-3 dark:text-white">web wedding</h3>
-            <p class="font-medium text-base text-secondary mb-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error voluptatem hic consequatur!</p>
+            <p class="font-medium text-base text-secondary mb-4">web ini dibuat dengan html, css dan javascript, dibuat untuk tujuan belajar membuat web secara mandiri</p>
             <a
-              href="#"
+              href="https://khalilfajrii.github.io/undangan-pernikahan/"
               class="font-medium text-sm text-white bg-primary py-3 px-6 rounded-lg hover:opacity-80"
               >Lihat Project</a
             >
@@ -352,9 +352,9 @@
               />
             </div>
             <h3 class="font-semibold text-xl text-dark mt-5 mb-3 dark:text-white">web Old Portfolio</h3>
-            <p class="font-medium text-base text-secondary mb-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error voluptatem hic consequatur!</p>
+            <p class="font-medium text-base text-secondary mb-4">web portofolio saya yang lama, web ini dibuat dengan html, css dan javascript</p>
             <a
-              href="#"
+              href="https://khalilfajrii.github.io/"
               class="font-medium text-sm text-white bg-primary py-3 px-6 rounded-lg hover:opacity-80"
               >Lihat Project</a
             >
